# Nociones_Clave_Programacion

./: CMakeLists.txt  Ejercicio1  Ejercicio1.cpp  README.md  main.cpp  persona.h
Ejercicio1/: Suma.cpp
Ejercicio3/: CMakeLists.txt  main.cpp  main2.cpp
Ejercicio4/: CMakeLists.txt  funciones.cpp  funciones.h  matematicas.cpp
Ejercicio5/: main.cpp
